--- a/.github/workflows/build_Release.yml
+++ b/.github/workflows/build_Release.yml
@@ -86,7 +86,8 @@ jobs:
       - name: 打包安装目录产物
         id: package
         run: |
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" -C "$INSTALL_DIR" .
+          cd "$INSTALL_DIR"
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" -C /etc /bin /include /lib *
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
 
       - name: 保存产物到Artifact
