--- a/.github/workflows/build_Release.yml
+++ b/.github/workflows/build_Release.yml
@@ -24,7 +24,7 @@ jobs:
         https://github.com/azerothcore/mod-learn-spells.git master
         https://github.com/azerothcore/mod-autobalance.git master
         https://github.com/azerothcore/mod-auto-revive.git master
-      RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      RELEASE_TOKEN: ${{ secrets.build_azrtothcore }}
 
     steps:
       - name: 检查架构（仅x86_64）
