--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -140,5 +140,6 @@ jobs:
         with:
           name: azerothcore-${{ env.BRANCH }}-exe
           path: 
-            - azerothcore-${{ env.BRANCH }}-win64.zip ./build/msbuild.log
+            - azerothcore-${{ env.BRANCH }}-win64.zip 
+            - ./build/msbuild.log
           retention-days: 14
